--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <style>
 body {
-font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-background-color: #fff;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    background-color: #fff;
+    margin: 0px;
+    padding: 0px;
 }
 
 #div_header {
@@ -58,13 +60,55 @@ color: white;
     margin: auto;
     width: 50%;
 }
+
+
+.nav{
+    list-style:none;
+    margin:0px;
+    padding:0px;
+    text-align:center;
+    background-color: #333;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    text-decoration: none;
+    display:inline-block;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+
+}
+
+.nav a:hover:not(.active){
+    background-color: #111;
+}
+
+.nav .active {
+    color: black;
+    background-color: #f6ca33;
+}
 </style>
 </head>
 <body>
+<ul class="nav">
+    <li><a class="active" href="/index.html">Europe</a></li>
+    <li><a href="/nawest.html">NA West</a></li>
+    <li><a href="/naeast.html">NA East</a></li>
+    <li><a href="/oceania.html">Oceania</a></li>
+</ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 14:59:59, 10/05/2020</p>
+    <p>Latest update: 15:17:23, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
