--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
     margin: auto;
     width: 50%;
     text-align: center;
+    margin-top: 80px;
 }
 
 #div_legend {
@@ -61,7 +62,6 @@ color: white;
     width: 50%;
 }
 
-
 .nav{
     list-style:none;
     margin:0px;
@@ -96,6 +96,13 @@ color: white;
     color: black;
     background-color: #f6ca33;
 }
+
+footer {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: center;
+    padding-bottom:20px;
+}
 </style>
 </head>
 <body>
@@ -108,7 +115,7 @@ color: white;
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 15:17:23, 10/05/2020</p>
+    <p>Latest update: 15:25:22, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -715,4 +722,7 @@ color: white;
 
 </div>
 </body>
+<footer>
+    <small>&copy; Copyright 2020, Kytos.org</small>
+</footer>
 </html>
