--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@ footer {
 </head>
 <body>
 <ul class="nav">
-    <li><a class="active" href="/index.html">Europe</a></li>
-    <li><a href="/nawest.html">NA West</a></li>
-    <li><a href="/naeast.html">NA East</a></li>
-    <li><a href="/oceania.html">Oceania</a></li>
+    <li><a class="active" href="/">Europe</a></li>
+    <li><a href="/nawest">NA West</a></li>
+    <li><a href="/naeast">NA East</a></li>
+    <li><a href="/oceania">Oceania</a></li>
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 15:55:03, 10/05/2020</p>
+    <p>Latest update: 15:57:33, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
