--- a/nawest.html
+++ b/nawest.html
@@ -107,15 +107,15 @@ footer {
 </head>
 <body>
 <ul class="nav">
-    <li><a href="/index.html">Europe</a></li>
-    <li><a class="active" href="/nawest.html">NA West</a></li>
-    <li><a href="/naeast.html">NA East</a></li>
-    <li><a href="/oceania.html">Oceania</a></li>
+    <li><a href="/">Europe</a></li>
+    <li><a class="active" href="/nawest">NA West</a></li>
+    <li><a href="/naeast">NA East</a></li>
+    <li><a href="/oceania">Oceania</a></li>
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA West Week 1</h1>
 
-    <p>Latest update: 15:55:21, 10/05/2020</p>
+    <p>Latest update: 15:57:51, 10/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
