--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@ footer {
     <li><a class="active" href="/">Europe</a></li>
     <li><a href="/nawest">NA West</a></li>
     <li><a href="/naeast">NA East</a></li>
-    <li><a href="/euania">euania</a></li>
+    <li><a href="/oceania">Oceania</a></li>
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 16:22:48, 10/05/2020</p>
+    <p>Latest update: 16:23:34, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
