--- a/nawest.html
+++ b/nawest.html
@@ -110,12 +110,12 @@ footer {
     <li><a href="/">Europe</a></li>
     <li><a class="active" href="/nawest">NA West</a></li>
     <li><a href="/naeast">NA East</a></li>
-    <li><a href="/nawania">nawania</a></li>
+    <li><a href="/oceania">Oceania</a></li>
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA West Week 1</h1>
 
-    <p>Latest update: 16:21:50, 10/05/2020</p>
+    <p>Latest update: 16:23:52, 10/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
