--- a/naeast.html
+++ b/naeast.html
@@ -110,12 +110,12 @@ footer {
     <li><a href="/">Europe</a></li>
     <li><a href="/nawest">NA West</a></li>
     <li><a class="active" href="/naeast">NA East</a></li>
-    <li><a href="/naeania">naeania</a></li>
+    <li><a href="/oceania">Oceania</a></li>
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA East Week 1</h1>
 
-    <p>Latest update: 16:22:08, 10/05/2020</p>
+    <p>Latest update: 16:24:09, 10/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
