--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 19:20:44, 10/05/2020</p>
+    <p>Latest update: 19:21:37, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -248,7 +248,7 @@ footer {
 <tr id="tr_fr"><td style="text-align: right;">113</td><td>lowless ب</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">114</td><td>jasоn 76</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">115</td><td>Wave Pablo</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">0</td></tr>
-<tr><td style="text-align: right;">116</td><td>Nakama quickdead</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">0</td></tr>
+<tr><td style="text-align: right;">116</td><td>Nakama quickdead</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">117</td><td>Hoop3k</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">118</td><td>4E Nate</td><td style="text-align: right;">103</td><td style="text-align: right;">103</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">119</td><td>BL SliX</td><td style="text-align: right;">102</td><td style="text-align: right;">102</td><td style="text-align: right;">[0]</td></tr>
@@ -618,7 +618,7 @@ footer {
 <tr><td style="text-align: right;">483</td><td>SF Jdian</td><td style="text-align: right;">40</td><td style="text-align: right;">40</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">484</td><td>S3RGL0</td><td style="text-align: right;">40</td><td style="text-align: right;">40</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">485</td><td>Gеn.G Moqii</td><td style="text-align: right;">40</td><td style="text-align: right;">40</td><td style="text-align: right;">[0]</td></tr>
-<tr><td style="text-align: right;">486</td><td>nLo loves vodka</td><td style="text-align: right;">39</td><td style="text-align: right;">39</td><td style="text-align: right;">[0]</td></tr>
+<tr><td style="text-align: right;">486</td><td>nLo loves vodka</td><td style="text-align: right;">39</td><td style="text-align: right;">39</td><td style="text-align: right;">0</td></tr>
 <tr><td style="text-align: right;">487</td><td>lankiestlemon999</td><td style="text-align: right;">39</td><td style="text-align: right;">39</td><td style="text-align: right;">0</td></tr>
 <tr><td style="text-align: right;">488</td><td>Plox Lucky.</td><td style="text-align: right;">39</td><td style="text-align: right;">39</td><td style="text-align: right;">0</td></tr>
 <tr id="tr_fr"><td style="text-align: right;">489</td><td>GOⱮINERR</td><td style="text-align: right;">39</td><td style="text-align: right;">35</td><td style="text-align: right;">4</td></tr>
@@ -721,7 +721,7 @@ footer {
 <tr><td style="text-align: right;">586</td><td>linear is fun</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">587</td><td>avesta shizolele</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">0</td></tr>
 <tr><td style="text-align: right;">588</td><td>Sláyzz</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td></tr>
-<tr><td style="text-align: right;">589</td><td>Grizi 4zr</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">[0]</td></tr>
+<tr><td style="text-align: right;">589</td><td>Grizi 4zr</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">0</td></tr>
 </tbody>
 </table>
 
