--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 22:31:24, 10/05/2020</p>
+    <p>Latest update: 22:32:18, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -432,11 +432,11 @@ footer {
 <tr><td style="text-align: right;">297</td><td>Optily</td><td style="text-align: right;">144</td><td style="text-align: right;">56</td><td style="text-align: right;">88</td></tr>
 <tr><td style="text-align: right;">298</td><td>Amp Lezaris</td><td style="text-align: right;">144</td><td style="text-align: right;">76</td><td style="text-align: right;">68</td></tr>
 <tr><td style="text-align: right;">299</td><td>xkom AGO Czɑjnik</td><td style="text-align: right;">143</td><td style="text-align: right;">63</td><td style="text-align: right;">80</td></tr>
-<tr><td style="text-align: right;">300</td><td>washedfnplayerr</td><td style="text-align: right;">143</td><td style="text-align: right;">63</td><td style="text-align: right;">80</td></tr>
-<tr id="tr_fr"><td style="text-align: right;">301</td><td>vipеr xd</td><td style="text-align: right;">143</td><td style="text-align: right;">23</td><td style="text-align: right;">120</td></tr>
-<tr id="tr_vit"><td style="text-align: right;">302</td><td>Vitаlity Nikof</td><td style="text-align: right;">143</td><td style="text-align: right;">48</td><td style="text-align: right;">95</td></tr>
-<tr><td style="text-align: right;">303</td><td>Twitch Rimic</td><td style="text-align: right;">143</td><td style="text-align: right;">52</td><td style="text-align: right;">91</td></tr>
-<tr><td style="text-align: right;">304</td><td>ShadeCOT</td><td style="text-align: right;">143</td><td style="text-align: right;">81</td><td style="text-align: right;">62</td></tr>
+<tr id="tr_fr"><td style="text-align: right;">300</td><td>vipеr xd</td><td style="text-align: right;">143</td><td style="text-align: right;">23</td><td style="text-align: right;">120</td></tr>
+<tr id="tr_vit"><td style="text-align: right;">301</td><td>Vitаlity Nikof</td><td style="text-align: right;">143</td><td style="text-align: right;">48</td><td style="text-align: right;">95</td></tr>
+<tr><td style="text-align: right;">302</td><td>Twitch Rimic</td><td style="text-align: right;">143</td><td style="text-align: right;">52</td><td style="text-align: right;">91</td></tr>
+<tr><td style="text-align: right;">303</td><td>ShadeCOT</td><td style="text-align: right;">143</td><td style="text-align: right;">81</td><td style="text-align: right;">62</td></tr>
+<tr><td style="text-align: right;">304</td><td>Hanckее</td><td style="text-align: right;">143</td><td style="text-align: right;">63</td><td style="text-align: right;">80</td></tr>
 <tr><td style="text-align: right;">305</td><td>Еdisоn</td><td style="text-align: right;">142</td><td style="text-align: right;">97</td><td style="text-align: right;">45</td></tr>
 <tr><td style="text-align: right;">306</td><td>ztyche_</td><td style="text-align: right;">142</td><td style="text-align: right;">82</td><td style="text-align: right;">60</td></tr>
 <tr><td style="text-align: right;">307</td><td>FnX IAmNoob</td><td style="text-align: right;">142</td><td style="text-align: right;">47</td><td style="text-align: right;">95</td></tr>
@@ -567,8 +567,8 @@ footer {
 <tr id="tr_fr"><td style="text-align: right;">432</td><td>OTW Stig ll</td><td style="text-align: right;">109</td><td style="text-align: right;">61</td><td style="text-align: right;">48</td></tr>
 <tr><td style="text-align: right;">433</td><td>Frеdy 35</td><td style="text-align: right;">109</td><td style="text-align: right;">80</td><td style="text-align: right;">29</td></tr>
 <tr><td style="text-align: right;">434</td><td>ₜₜᵥThemorik0</td><td style="text-align: right;">108</td><td style="text-align: right;">47</td><td style="text-align: right;">61</td></tr>
-<tr><td style="text-align: right;">435</td><td>S3RGL0</td><td style="text-align: right;">108</td><td style="text-align: right;">40</td><td style="text-align: right;">68</td></tr>
-<tr><td style="text-align: right;">436</td><td>Playwell Styrsix</td><td style="text-align: right;">108</td><td style="text-align: right;">43</td><td style="text-align: right;">65</td></tr>
+<tr><td style="text-align: right;">435</td><td>Playwell Styrsix</td><td style="text-align: right;">108</td><td style="text-align: right;">43</td><td style="text-align: right;">65</td></tr>
+<tr><td style="text-align: right;">436</td><td>COMETA S3RGL0</td><td style="text-align: right;">108</td><td style="text-align: right;">40</td><td style="text-align: right;">68</td></tr>
 <tr><td style="text-align: right;">437</td><td>Tzm 0N YT</td><td style="text-align: right;">106</td><td style="text-align: right;">75</td><td style="text-align: right;">31</td></tr>
 <tr><td style="text-align: right;">438</td><td>Jаmmu</td><td style="text-align: right;">106</td><td style="text-align: right;">57</td><td style="text-align: right;">49</td></tr>
 <tr><td style="text-align: right;">439</td><td>Swipses</td><td style="text-align: right;">105</td><td style="text-align: right;">38</td><td style="text-align: right;">67</td></tr>
