--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
 
-    <p>Latest update: 22:32:18, 10/05/2020</p>
+    <p>Latest update: 22:33:13, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -471,7 +471,7 @@ footer {
 <tr><td style="text-align: right;">336</td><td>Grotto Clowd1e</td><td style="text-align: right;">135</td><td style="text-align: right;">72</td><td style="text-align: right;">63</td></tr>
 <tr><td style="text-align: right;">337</td><td>vervana supereye</td><td style="text-align: right;">134</td><td style="text-align: right;">75</td><td style="text-align: right;">59</td></tr>
 <tr><td style="text-align: right;">338</td><td>Mirofy</td><td style="text-align: right;">134</td><td style="text-align: right;">56</td><td style="text-align: right;">78</td></tr>
-<tr><td style="text-align: right;">339</td><td>g4lmar</td><td style="text-align: right;">133</td><td style="text-align: right;">41</td><td style="text-align: right;">92</td></tr>
+<tr><td style="text-align: right;">339</td><td>g4lmar with 1050</td><td style="text-align: right;">133</td><td style="text-align: right;">41</td><td style="text-align: right;">92</td></tr>
 <tr><td style="text-align: right;">340</td><td>Wave Wraxx</td><td style="text-align: right;">133</td><td style="text-align: right;">62</td><td style="text-align: right;">71</td></tr>
 <tr><td style="text-align: right;">341</td><td>STR Alexcod</td><td style="text-align: right;">133</td><td style="text-align: right;">98</td><td style="text-align: right;">35</td></tr>
 <tr><td style="text-align: right;">342</td><td>Buzbеar</td><td style="text-align: right;">133</td><td style="text-align: right;">81</td><td style="text-align: right;">52</td></tr>
