--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@ footer {
 </ul>
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo EU Week 1</h1>
+    <h3>Does not take into account the equality of points!</h3>
 
-    <p>Latest update: 22:39:39, 10/05/2020</p>
+    <p>Latest update: 22:44:34, 10/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -717,7 +718,7 @@ footer {
 <tr><td style="text-align: right;">582</td><td>phxnz duo</td><td style="text-align: right;">9</td><td style="text-align: right;">3</td><td style="text-align: right;">6</td></tr>
 <tr id="tr_fr"><td style="text-align: right;">583</td><td>Z Y N best toxic</td><td style="text-align: right;">9</td><td style="text-align: right;">9</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">584</td><td>Rxhat</td><td style="text-align: right;">7</td><td style="text-align: right;">7</td><td style="text-align: right;">[0]</td></tr>
-<tr><td style="text-align: right;">585</td><td>Phxnt0mrr</td><td style="text-align: right;">7</td><td style="text-align: right;">[0]</td><td style="text-align: right;">7</td></tr>
+<tr><td style="text-align: right;">585</td><td>Phxnt0m -ω-</td><td style="text-align: right;">7</td><td style="text-align: right;">[0]</td><td style="text-align: right;">7</td></tr>
 <tr><td style="text-align: right;">586</td><td>75am Chriss</td><td style="text-align: right;">5</td><td style="text-align: right;">[0]</td><td style="text-align: right;">5</td></tr>
 <tr><td style="text-align: right;">587</td><td>IG TT9.Repeats</td><td style="text-align: right;">4</td><td style="text-align: right;">4</td><td style="text-align: right;">[0]</td></tr>
 <tr><td style="text-align: right;">588</td><td>Sláyzz</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">1</td></tr>
