--- a/naeast.html
+++ b/naeast.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA East Week 1</h1>
 
-    <p>Latest update: 02:36:31, 11/05/2020</p>
+    <p>Latest update: 02:37:23, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
@@ -201,7 +201,7 @@ footer {
 <tr><td style="text-align: right;">66</td><td>Ved on Legacy</td><td style="text-align: right;">234</td><td style="text-align: right;">130</td><td style="text-align: right;">104</td><td style="text-align: right;">0</td><td style="text-align: right;">1.45</td><td style="text-align: right;">44.90</td><td style="text-align: right;">16420</td></tr>
 <tr><td style="text-align: right;">67</td><td>grandmateets</td><td style="text-align: right;">233</td><td style="text-align: right;">100</td><td style="text-align: right;">133</td><td style="text-align: right;">0</td><td style="text-align: right;">1.40</td><td style="text-align: right;">43.85</td><td style="text-align: right;">18444</td></tr>
 <tr><td style="text-align: right;">68</td><td>smugy.</td><td style="text-align: right;">231</td><td style="text-align: right;">119</td><td style="text-align: right;">112</td><td style="text-align: right;">1</td><td style="text-align: right;">1.57</td><td style="text-align: right;">37.40</td><td style="text-align: right;">17266</td></tr>
-<tr><td style="text-align: right;">69</td><td>Alliege El Niño</td><td style="text-align: right;">231</td><td style="text-align: right;">118</td><td style="text-align: right;">113</td><td style="text-align: right;">1</td><td style="text-align: right;">1.52</td><td style="text-align: right;">42.10</td><td style="text-align: right;">17280</td></tr>
+<tr><td style="text-align: right;">69</td><td>Alliege</td><td style="text-align: right;">231</td><td style="text-align: right;">118</td><td style="text-align: right;">113</td><td style="text-align: right;">1</td><td style="text-align: right;">1.52</td><td style="text-align: right;">42.10</td><td style="text-align: right;">17280</td></tr>
 <tr><td style="text-align: right;">70</td><td>Vanish Bank ب</td><td style="text-align: right;">231</td><td style="text-align: right;">124</td><td style="text-align: right;">107</td><td style="text-align: right;">1</td><td style="text-align: right;">1.50</td><td style="text-align: right;">51.90</td><td style="text-align: right;">14623</td></tr>
 <tr><td style="text-align: right;">71</td><td>SimpleFN.</td><td style="text-align: right;">231</td><td style="text-align: right;">95</td><td style="text-align: right;">136</td><td style="text-align: right;">1</td><td style="text-align: right;">1.26</td><td style="text-align: right;">41.98</td><td style="text-align: right;">16792</td></tr>
 <tr><td style="text-align: right;">72</td><td>NRG Unknown.</td><td style="text-align: right;">231</td><td style="text-align: right;">154</td><td style="text-align: right;">77</td><td style="text-align: right;">0</td><td style="text-align: right;">2.10</td><td style="text-align: right;">52.40</td><td style="text-align: right;">14653</td></tr>
