--- a/naeast.html
+++ b/naeast.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA East Week 1</h1>
 
-    <p>Latest update: 02:37:23, 11/05/2020</p>
+    <p>Latest update: 02:38:22, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
@@ -491,7 +491,7 @@ footer {
 <tr><td style="text-align: right;">356</td><td>cheater staqi</td><td style="text-align: right;">113</td><td style="text-align: right;">64</td><td style="text-align: right;">49</td><td style="text-align: right;">0</td><td style="text-align: right;">0.65</td><td style="text-align: right;">50.80</td><td style="text-align: right;">15927</td></tr>
 <tr><td style="text-align: right;">357</td><td>Jellyy XIV</td><td style="text-align: right;">113</td><td style="text-align: right;">75</td><td style="text-align: right;">38</td><td style="text-align: right;">0</td><td style="text-align: right;">0.50</td><td style="text-align: right;">48.80</td><td style="text-align: right;">16168</td></tr>
 <tr><td style="text-align: right;">358</td><td>Lucid Is A MILF</td><td style="text-align: right;">112</td><td style="text-align: right;">78</td><td style="text-align: right;">34</td><td style="text-align: right;">1</td><td style="text-align: right;">0.70</td><td style="text-align: right;">61.45</td><td style="text-align: right;">12203</td></tr>
-<tr><td style="text-align: right;">359</td><td>GМoney</td><td style="text-align: right;">112</td><td style="text-align: right;">69</td><td style="text-align: right;">43</td><td style="text-align: right;">0</td><td style="text-align: right;">0.90</td><td style="text-align: right;">64.25</td><td style="text-align: right;">11179</td></tr>
+<tr><td style="text-align: right;">359</td><td>G freakin Money</td><td style="text-align: right;">112</td><td style="text-align: right;">69</td><td style="text-align: right;">43</td><td style="text-align: right;">0</td><td style="text-align: right;">0.90</td><td style="text-align: right;">64.25</td><td style="text-align: right;">11179</td></tr>
 <tr><td style="text-align: right;">360</td><td>FaZe Thiefs</td><td style="text-align: right;">112</td><td style="text-align: right;">54</td><td style="text-align: right;">58</td><td style="text-align: right;">0</td><td style="text-align: right;">0.70</td><td style="text-align: right;">47.75</td><td style="text-align: right;">17651</td></tr>
 <tr><td style="text-align: right;">361</td><td>Void Ꭾ</td><td style="text-align: right;">112</td><td style="text-align: right;">66</td><td style="text-align: right;">46</td><td style="text-align: right;">0</td><td style="text-align: right;">0.50</td><td style="text-align: right;">48.70</td><td style="text-align: right;">16946</td></tr>
 <tr><td style="text-align: right;">362</td><td>D Е V</td><td style="text-align: right;">111</td><td style="text-align: right;">67</td><td style="text-align: right;">44</td><td style="text-align: right;">0</td><td style="text-align: right;">0.60</td><td style="text-align: right;">48.90</td><td style="text-align: right;">16833</td></tr>
