--- a/nawest.html
+++ b/nawest.html
@@ -115,7 +115,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial Leaderboard] FNCS Solo NA West Week 1</h1>
 
-    <p>Latest update: 05:32:22, 11/05/2020</p>
+    <p>Latest update: 05:33:17, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
@@ -185,7 +185,7 @@ footer {
 <tr><td style="text-align: right;">50</td><td>Dymide</td><td style="text-align: right;">247</td><td style="text-align: right;">168</td><td style="text-align: right;">79</td><td style="text-align: right;">1</td><td style="text-align: right;">1.50</td><td style="text-align: right;">40.95</td><td style="text-align: right;">16575</td></tr>
 <tr><td style="text-align: right;">51</td><td>TurtleTavern</td><td style="text-align: right;">247</td><td style="text-align: right;">113</td><td style="text-align: right;">134</td><td style="text-align: right;">0</td><td style="text-align: right;">1.56</td><td style="text-align: right;">31.08</td><td style="text-align: right;">17749</td></tr>
 <tr><td style="text-align: right;">52</td><td>02 Dex</td><td style="text-align: right;">246</td><td style="text-align: right;">150</td><td style="text-align: right;">96</td><td style="text-align: right;">1</td><td style="text-align: right;">1.60</td><td style="text-align: right;">43.80</td><td style="text-align: right;">17260</td></tr>
-<tr><td style="text-align: right;">53</td><td>xDiоz</td><td style="text-align: right;">245</td><td style="text-align: right;">51</td><td style="text-align: right;">194</td><td style="text-align: right;">0</td><td style="text-align: right;">1.61</td><td style="text-align: right;">39.24</td><td style="text-align: right;">15974</td></tr>
+<tr><td style="text-align: right;">53</td><td>xDioz神</td><td style="text-align: right;">245</td><td style="text-align: right;">51</td><td style="text-align: right;">194</td><td style="text-align: right;">0</td><td style="text-align: right;">1.61</td><td style="text-align: right;">39.24</td><td style="text-align: right;">15974</td></tr>
 <tr><td style="text-align: right;">54</td><td>Yukіrr</td><td style="text-align: right;">243</td><td style="text-align: right;">120</td><td style="text-align: right;">123</td><td style="text-align: right;">0</td><td style="text-align: right;">1.95</td><td style="text-align: right;">46.35</td><td style="text-align: right;">15674</td></tr>
 <tr><td style="text-align: right;">55</td><td>mаken</td><td style="text-align: right;">241</td><td style="text-align: right;">139</td><td style="text-align: right;">102</td><td style="text-align: right;">0</td><td style="text-align: right;">2.06</td><td style="text-align: right;">46.27</td><td style="text-align: right;">14758</td></tr>
 <tr><td style="text-align: right;">56</td><td>Gustаvо</td><td style="text-align: right;">239</td><td style="text-align: right;">120</td><td style="text-align: right;">119</td><td style="text-align: right;">1</td><td style="text-align: right;">1.80</td><td style="text-align: right;">49.60</td><td style="text-align: right;">15981</td></tr>
