--- a/week1/nawest.html
+++ b/week1/nawest.html
@@ -18,7 +18,7 @@ body {
 
 #div_legend {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 table {
@@ -62,39 +62,92 @@ color: white;
     width: 50%;
 }
 
-.nav{
-    list-style:none;
-    margin:0px;
-    padding:0px;
-    text-align:center;
+
+.navbar {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
     background-color: #333;
     position: fixed;
     width: 100%;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.nav li{
-    display:inline;
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 0px;
+    text-decoration: none;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
-.nav a{
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     font-size: 17px;
-    text-decoration: none;
-    display:inline-block;
-    padding-left: 30px;
-    padding-right: 30px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: white;
-
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
-.nav a:hover:not(.active){
+.dropbtn-active {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: black;
+    background-color: #f6ca33;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn .dropbtn-active{
     background-color: #111;
 }
 
-.nav .active {
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    float: none;
     color: black;
-    background-color: #f6ca33;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 footer {
@@ -106,16 +159,48 @@ footer {
 </style>
 </head>
 <body>
-<ul class="nav">
-    <li><a href="/">Europe</a></li>
-    <li><a class="active" href="/nawest">NA West</a></li>
-    <li><a href="/naeast">NA East</a></li>
-    <li><a href="/oceania">Oceania</a></li>
-</ul>
+<div class="navbar">
+    <div class="dropdown">
+        <button class="dropbtn">
+            Europe
+        </button >
+        <div class="dropdown-content">
+            <a href="/week1/europe"> Week 1 </a>
+            <a href="/week2/europe"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            NA East
+        </button >
+        <div class="dropdown-content">
+            <a href="/week1/naeast"> Week 1 </a>
+            <a href="/week2/naeast"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn-active">
+            NA West
+        </button >
+        <div class="dropdown-content">
+            <a href="/week1/nawest"> Week 1 </a>
+            <a href="/week2/nawest"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            Oceania
+        </button >
+        <div class="dropdown-content">
+            <a href="/week1/oceania"> Week 1 </a>
+            <a href="/week2/oceania"> Week 2 </a>
+        </div>
+    </div>
+</div>
 <div id="div_header">
-    <h1>[Unofficial Leaderboard] FNCS Solo NA West Week 1</h1>
+    <h1>[Unofficial] FNCS Solo NA West Week 1</h1>
 
-    <p>Latest update: 12:01:43, 11/05/2020</p>
+    <p>Latest update: 13:35:30, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
@@ -684,6 +769,6 @@ footer {
 </div>
 </body>
 <footer>
-    <small>&copy; Copyright 2020, Kytos.org</small>
+    <small> &copy; Copyright 2020, Kytos.org < /small >
 </footer>
 </html>
