--- a/week1/middleeast.html
+++ b/week1/middleeast.html
@@ -170,7 +170,7 @@ footer {
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn-active">
+        <button class="dropbtn">
             NA East
         </button>
         <div class="dropdown-content">
@@ -215,7 +215,7 @@ footer {
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">
+        <button class="dropbtn-active">
             Middle East
         </button>
         <div class="dropdown-content">
@@ -225,9 +225,9 @@ footer {
     </div>
 </div>
 <div id="div_header">
-    <h1>[Unofficial] FNCS Solo NA East Week 2</h1>
+    <h1>[Unofficial] FNCS Solo Middle East Week 1</h1>
 
-    <p>Latest update: 22:28:36, 11/05/2020</p>
+    <p>Latest update: 22:32:54, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
