--- a/week2/oceania.html
+++ b/week2/oceania.html
@@ -163,7 +163,7 @@ footer {
     <div class="dropdown">
         <button class="dropbtn">
             Europe
-        </button >
+        </button>
         <div class="dropdown-content">
             <a href="/week1/europe"> Week 1 </a>
             <a href="/week2/europe"> Week 2 </a>
@@ -172,7 +172,7 @@ footer {
     <div class="dropdown">
         <button class="dropbtn">
             NA East
-        </button >
+        </button>
         <div class="dropdown-content">
             <a href="/week1/naeast"> Week 1 </a>
             <a href="/week2/naeast"> Week 2 </a>
@@ -181,7 +181,7 @@ footer {
     <div class="dropdown">
         <button class="dropbtn">
             NA West
-        </button >
+        </button>
         <div class="dropdown-content">
             <a href="/week1/nawest"> Week 1 </a>
             <a href="/week2/nawest"> Week 2 </a>
@@ -190,17 +190,44 @@ footer {
     <div class="dropdown">
         <button class="dropbtn-active">
             Oceania
-        </button >
+        </button>
         <div class="dropdown-content">
             <a href="/week1/oceania"> Week 1 </a>
             <a href="/week2/oceania"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            Brazil
+        </button>
+        <div class="dropdown-content">
+            <a href="/week1/brazil"> Week 1 </a>
+            <a href="/week2/brazil"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            Asia
+        </button>
+        <div class="dropdown-content">
+            <a href="/week1/asia"> Week 1 </a>
+            <a href="/week2/asia"> Week 2 </a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            Middle East
+        </button>
+        <div class="dropdown-content">
+            <a href="/week1/middleeast"> Week 1 </a>
+            <a href="/week2/middleeast"> Week 2 </a>
         </div>
     </div>
 </div>
 <div id="div_header">
     <h1>[Unofficial] FNCS Solo Oceania Week 2</h1>
 
-    <p>Latest update: 13:42:34, 11/05/2020</p>
+    <p>Latest update: 22:29:00, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
