--- a/week2/brazil.html
+++ b/week2/brazil.html
@@ -170,7 +170,7 @@ footer {
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn-active">
+        <button class="dropbtn">
             NA East
         </button>
         <div class="dropdown-content">
@@ -197,7 +197,7 @@ footer {
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">
+        <button class="dropbtn-active">
             Brazil
         </button>
         <div class="dropdown-content">
@@ -225,9 +225,9 @@ footer {
     </div>
 </div>
 <div id="div_header">
-    <h1>[Unofficial] FNCS Solo NA East Week 2</h1>
+    <h1>[Unofficial] FNCS Solo Brazil Week 2</h1>
 
-    <p>Latest update: 22:28:36, 11/05/2020</p>
+    <p>Latest update: 22:29:14, 11/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
