--- a/week1/asia.html
+++ b/week1/asia.html
@@ -227,7 +227,7 @@ footer {
 <div id="div_header">
     <h1>[Unofficial] FNCS Solo Asia Week 1</h1>
 
-    <p>Latest update: 00:27:50, 13/05/2020</p>
+    <p>Latest update: 00:34:08, 13/05/2020</p>
 </div>
 <div id="div_table"><table>
 <thead>
@@ -680,7 +680,7 @@ footer {
 <tr><td style="text-align: right;">431</td><td>Pienッ</td><td style="text-align: right;">47</td><td style="text-align: right;">47</td><td style="text-align: right;">[0]</td><td style="text-align: right;">7</td><td style="text-align: right;">0</td><td style="text-align: right;">1.0</td><td style="text-align: right;">51.3</td><td style="text-align: right;">6.7</td><td style="text-align: right;">5136</td></tr>
 <tr><td style="text-align: right;">432</td><td>FR.Ḿilky〻</td><td style="text-align: right;">46</td><td style="text-align: right;">46</td><td style="text-align: right;">0</td><td style="text-align: right;">12</td><td style="text-align: right;">0</td><td style="text-align: right;">0.7</td><td style="text-align: right;">65.0</td><td style="text-align: right;">3.8</td><td style="text-align: right;">5483</td></tr>
 <tr><td style="text-align: right;">433</td><td>gkan iwnl</td><td style="text-align: right;">46</td><td style="text-align: right;">30</td><td style="text-align: right;">16</td><td style="text-align: right;">17</td><td style="text-align: right;">0</td><td style="text-align: right;">0.3</td><td style="text-align: right;">61.5</td><td style="text-align: right;">2.7</td><td style="text-align: right;">9991</td></tr>
-<tr><td style="text-align: right;">434</td><td>お絵かきロジック</td><td style="text-align: right;">46</td><td style="text-align: right;">35</td><td style="text-align: right;">11</td><td style="text-align: right;">19</td><td style="text-align: right;">0</td><td style="text-align: right;">0.3</td><td style="text-align: right;">64.3</td><td style="text-align: right;">2.4</td><td style="text-align: right;">9192</td></tr>
+<tr><td style="text-align: right;">434</td><td>AIMに極振りArms.ロジくん</td><td style="text-align: right;">46</td><td style="text-align: right;">35</td><td style="text-align: right;">11</td><td style="text-align: right;">19</td><td style="text-align: right;">0</td><td style="text-align: right;">0.3</td><td style="text-align: right;">64.3</td><td style="text-align: right;">2.4</td><td style="text-align: right;">9192</td></tr>
 <tr><td style="text-align: right;">435</td><td>れもぐろん.</td><td style="text-align: right;">46</td><td style="text-align: right;">27</td><td style="text-align: right;">19</td><td style="text-align: right;">20</td><td style="text-align: right;">0</td><td style="text-align: right;">0.2</td><td style="text-align: right;">59.0</td><td style="text-align: right;">2.3</td><td style="text-align: right;">12143</td></tr>
 <tr><td style="text-align: right;">436</td><td>きっどぽこ</td><td style="text-align: right;">46</td><td style="text-align: right;">14</td><td style="text-align: right;">32</td><td style="text-align: right;">19</td><td style="text-align: right;">0</td><td style="text-align: right;">0.2</td><td style="text-align: right;">62.7</td><td style="text-align: right;">2.4</td><td style="text-align: right;">10337</td></tr>
 <tr><td style="text-align: right;">437</td><td>りくとNo.1</td><td style="text-align: right;">44</td><td style="text-align: right;">29</td><td style="text-align: right;">15</td><td style="text-align: right;">13</td><td style="text-align: right;">0</td><td style="text-align: right;">0.5</td><td style="text-align: right;">61.5</td><td style="text-align: right;">3.4</td><td style="text-align: right;">6542</td></tr>
