--- a/week2/naeast.html
+++ b/week2/naeast.html
@@ -1,165 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    background-color: #fff;
-    margin: 0px;
-    padding: 0px;
-}
-
-#div_header {
-    margin: auto;
-    width: 50%;
-    text-align: center;
-    margin-top: 80px;
-}
-
-#div_legend {
-    display: flex;
-    justify-content: space-between;
-}
-
-table {
-font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-border-collapse: collapse;
-width: 100%;
-}
-
-table td, table th {
-border: 1px solid #ddd;
-padding: 8px;
-}
-table tr:nth-child(odd){background-color: #ffffff;}
-
-table tr:nth-child(even){background-color: #f2f2f2;}
-
-table tr:hover {background-color: #ddd;}
-
-#tr_vit{
-    background-color: #f6ca33;
-}
-
-#tr_vit:hover {background-color: #FAE499;}
-
-#tr_fr{
-    background-color: #c3e8f5;
-}
-
-#tr_fr:hover {background-color: #88d1eb;}
-
-table th {
-padding-top: 12px;
-padding-bottom: 12px;
-text-align: left;
-background-color: #747674;
-color: white;
-}
-
-#div_table {
-    margin: auto;
-    width: 50%;
-}
-
-
-.navbar {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-    background-color: #333;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 0px;
-    text-decoration: none;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: white;
-    background-color: inherit;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.dropbtn-active {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: black;
-    background-color: #f6ca33;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.navbar a:hover,
-.dropdown:hover .dropbtn .dropbtn-active{
-    background-color: #111;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-footer {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    text-align: center;
-    padding-bottom:20px;
-}
-</style>
+<meta charset="UTF-8">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="/scripts/stupidtable.js"></script>
+<script src="/scripts/table.js"></script>
+<link rel="stylesheet" href="/css/style.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
+<button onclick="topFunction()" id="return-to-top" title="Go to top"><i class="icon-chevron-up"></i></button>
+<div id="page-container">
+<div id="div_header">
+    <h1>[Unofficial] FNCS Solo NA East Week 2</h1>
+
+    <p>Latest update: 17:54:01, 13/05/2020</p>
+</div>
+<div id="div_table">
+<input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for players..." onfocus="this.placeholder=''" onblur="this.placeholder='Search for players...'" title="Type in a name"><table id="table_ranking">
+<thead>
+<tr>
+<th data-sort="int" style="text-align: right;"> Rank</th>
+<th data-sort="string">Player </th>
+<th data-sort="int" style="text-align: right;"> Total</th>
+<th data-sort="int" style="text-align: right;"> Day1</th>
+<th data-sort="int" style="text-align: right;"> Day2</th>
+<th data-sort="int" style="text-align: right;"> M Played</th>
+<th data-sort="int" style="text-align: right;"> Wins</th>
+<th data-sort="int" style="text-align: right;"> Kills</th>
+<th data-sort="float" style="text-align: right;"> Avg Elims</th>
+<th data-sort="float" style="text-align: right;"> Avg Place</th>
+<th data-sort="float" style="text-align: right;"> Avg PTS</th>
+<th data-sort="int" style="text-align: right;"> T Alive</th>
+</tr>
+</thead>
+<tbody>
+
+</tbody>
+</table>
+
+</div>
 <div class="navbar">
+
     <div class="dropdown">
         <button class="dropbtn">
             Europe
@@ -224,33 +106,24 @@ footer {
         </div>
     </div>
 </div>
-<div id="div_header">
-    <h1>[Unofficial] FNCS Solo NA East Week 2</h1>
-
-    <p>Latest update: 22:28:36, 11/05/2020</p>
-</div>
-<div id="div_table"><table>
-<thead>
-<tr>
-<th style="text-align: right;"> Rank</th>
-<th>Player </th>
-<th style="text-align: right;"> Total</th>
-<th style="text-align: right;"> Day1</th>
-<th style="text-align: right;"> Day2</th>
-<th style="text-align: right;"> Wins</th>
-<th style="text-align: right;"> Avg Elims</th>
-<th style="text-align: right;"> Avg Place</th>
-<th style="text-align: right;"> Time Alive</th>
-</tr>
-</thead>
-<tbody>
-
-</tbody>
-</table>
-
-</div>
-</body>
 <footer>
-    <small> &copy; Copyright 2020, Kytos.org </small>
+    &copy; Copyright 2020, Kytos.org
 </footer>
+</div>
+<script>
+    var mybutton = document.getElementById("return-to-top");
+    window.onscroll = function() {scrollFunction()};
+    function scrollFunction() {
+        if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+            mybutton.style.display = "block";
+        } else {
+            mybutton.style.display = "none";
+        }
+    }
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+</body>
 </html>
