--- a/week2/europe.html
+++ b/week2/europe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Europe - Kytos.org</title>
 <meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="/scripts/stupidtable.js"></script>
@@ -14,7 +15,7 @@
 <div id="div_header">
     <h1>[Unofficial] FNCS Solo Europe Week 2</h1>
 
-    <p>Latest update: 17:53:51, 13/05/2020</p>
+    <p>Latest update: 21:04:42, 13/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
