--- a/week2/brazil.html
+++ b/week2/brazil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Brazil - Kytos.org</title>
 <meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="/scripts/stupidtable.js"></script>
@@ -14,7 +15,7 @@
 <div id="div_header">
     <h1>[Unofficial] FNCS Solo Brazil Week 2</h1>
 
-    <p>Latest update: 17:54:32, 13/05/2020</p>
+    <p>Latest update: 21:05:34, 13/05/2020</p>
 </div>
 <div id="div_table">
 <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for players..." onfocus="this.placeholder=''" onblur="this.placeholder='Search for players...'" title="Type in a name"><table id="table_ranking">
