--- a/week2/europe.html
+++ b/week2/europe.html
@@ -15,7 +15,7 @@
 <div id="div_header">
     <h1>[Unofficial] FNCS Solo Europe Week 2</h1>
 
-    <p>Latest update: 19:34:46, 16/05/2020</p>
+    <p>Latest update: 19:35:29, 16/05/2020</p>
     <div id="div_legend">
         <div style="display: flex;">
             <div style="margin-right:10px; height: 35px; width: 35px; background-color: #f6ca33;"></div>
@@ -347,8 +347,7 @@
 <tr><td style="text-align: right;">298</td><td>Balaskoni</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">98.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">119</td></tr>
 <tr><td style="text-align: right;">299</td><td>EG queasy</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">98.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">116</td></tr>
 <tr><td style="text-align: right;">300</td><td>KOVA Aistimus</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">98.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">102</td></tr>
-<tr><td style="text-align: right;">301</td><td>Wave Maestrorr</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">99.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">106</td></tr>
-<tr><td style="text-align: right;">302</td><td>XL Wolfiez</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">100.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">98</td></tr>
+<tr><td style="text-align: right;">301</td><td>FaZe Mongrааl</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">[0]</td><td style="text-align: right;">1</td><td style="text-align: right;">0</td><td style="text-align: right;">0</td><td style="text-align: right;">0.00</td><td style="text-align: right;">99.00</td><td style="text-align: right;">0.00</td><td style="text-align: right;">106</td></tr>
 </tbody>
 </table>
 
